Refine rules around the horn
- Add rhyme "ơc"...

- No longer prevent what the user is thinking with "qu" and diacritics outside
the vi_vn dictionary, but still correct cases such as "qua1"->"quá",
"qui1"->"quí", etc.

- Correct "uơ" and "ươ": do not always use the latter, if a character follows
use the later, else use the former; when a character is added after the former,
turn it into the latter.

- Reposition tone with certain alphabetic diacritic modifications: "uấ7"->"ứa",
etc.

--- a/manual-tone-positions.jsonc
+++ b/manual-tone-positions.jsonc
@@ -3,5 +3,6 @@
   "uya": 1,
   "uyn": 1,
   "uâng": 1,
-  "uôp": 1 // Not in dictionary, but some existing rules have so let's add this
+  "uôp": 1, // Not in dictionary, but some existing rules have so let's add this
+  "ơc": 0,
 }
